# poetry_envs

./: CERN Pricing .ipynb  Makefile  README.md  git_fixes.txt
kernefysik/: Isospin - Clebsch-Gordan Coefficients.ipynb  Readings of the massround.mas20.txt.ipynb  Uge 1 opgave 1..ipynb  extra problem 6 test numerisk gik ikke godt.ipynb  extra problems 6.ipynb  extra_problem_21.ipynb  mass_df.ipynb  opgave 30.ipynb  opgave 33.ipynb  pyproject.toml  test opg 18 + sing.ipynb
reaktorfysik/: README.md  pyproject.toml
reaktorfysik/RFP/Datalabs/Datalab01/: 1-BasicPython.ipynb
reaktorfysik/RFP/Datalabs/Datalab02/: 2-IntermediatePythonI.ipynb
reaktorfysik/RFP/Datalabs/Datalab03/: 3-IntermediatePythonII.ipynb
reaktorfysik/RFP/Datalabs/Datalab04/: 4-Scattering_MCintro.ipynb
reaktorfysik/RFP/Datalabs/Datalab05/: 5a-FissionTrees.ipynb  5b-FixedSourceMC.ipynb
reaktorfysik/RFP/Datalabs/Datalab06/: 6-openMCIntro.ipynb  geometry.xml  materials.xml  settings.xml  statepoint.100.h5  summary.h5  tallies.out  tallies.xml
reaktorfysik/RFP/Datalabs/Datalab07/: 7-NumericalDiffusion.ipynb  7b-openmc_mgxs.ipynb  geometry.xml  materials.xml  (+5 more)
ultrafast_science/: 0002_windows.pkl  2347.pkl  A2_is_0_15_windows.pkl  A_1.ipynb  I_er_e14_23_windows.pkl  New_Standard_N_.pkl  New_Standard_N_10_w_400_limit_15.pkl  README.md  Sidste Aflevering.ipynb  Sidste_afl2.ipynb  Sidste_afl2_mac_doku.ipynb  Standard.pkl  Sympy_analytical_solutions_integrals.ipynb  compute.py.ipynb  pyproject.toml  tø uge 1.ipynb  ws_er_2ws_19_windows.pkl
ultrafast_science/sim_results/: compute.py  simulation.py
(+39 files in other folders)
