[tool.poetry]
name = "reaktorfysik"
version = "0.1.0"
description = "For the course reatorfysik"
authors = ["mikkelsewerin <mikkelsewerin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
scipy = "<1.12"
matplotlib = "^3.8.2"
pandas = "^2.2.0"
ipykernel = "^6.29.0"
radioactivedecay = "^0.4.22"
jupyter = "^1.0.0"

[tool.poetry.dependencies.openmc]
path = "local-packages/openmc"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
