[tool.poetry]
name = "test"
version = "0.1.0"
description = "a testing env"
authors = ["mikkelsewerin <mikkelsewerin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.2.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
sympy = "^1.12"
pathos = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
